assets/css/style.css
/* ... */
@media (max-width: 991px) {
  .cs_video_block_style_1 {
    min-height: 350px;
  }
}

.cs_funfact_style_1 .cs_funfact_number {
  display: flex;
}

.cs_funfact_style_1 .odometer.odometer-auto-theme .odometer-digit .odometer-digit-inner,
.cs_funfact_style_1 .odometer.odometer-theme-default .odometer-digit .odometer-digit-inner {
  left: -1px;
  right: -1px;
}

.cs_funfact_wrapper_style_1 {
  display: grid;
  grid-template-columns: repeat(4, auto);
  justify-content: space-between;
  gap: 24px 30px;
}

@media (max-width: 991px) {
  .cs_funfact_wrapper_style_1 {
    grid-template-columns: repeat(2, auto);
  }
}

@media (max-width: 450px) {
  .cs_funfact_wrapper_style_1 {
    grid-template-columns: repeat(1, auto);
    justify-content: center;
  }
}



.cs_about_style_2 .cs_about_content {
  width: 100%;
  min-height: 500px;
  padding-left: 52%;
}

.cs_about_style_2 .cs_about_content>* {
  position: relative;
  z-index: 1;
}

.cs_about_style_2 .cs_about_thumbnail {
  position: absolute;
  left: 0;
  top: 0;
  padding-right: 51%;
}

.cs_about_style_2 .cs_funfact_wrapper_style_1 {
  padding-left: 12px;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 56px 36px;
}

@media (max-width: 1199px) {
  .cs_about_style_2 .cs_funfact_wrapper_style_1 {
    gap: 24px 16px;
  }
}

@media (max-width: 991px) {
  .cs_about_style_2 {
    padding: 0 18px;
  }

  .cs_about_style_2 .cs_about_content,
  .cs_about_style_2 .cs_funfact_wrapper_style_1 {
    padding: 0;
  }

  .cs_about_style_2 .cs_about_thumbnail {
    position: initial;
    padding: 0;
  }

  .cs_about_style_2 .cs_funfact_style_1 {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
}

@media (max-width: 380px) {
  .cs_about_style_2 .cs_funfact_wrapper_style_1 {
    grid-template-columns: repeat(1, 1fr);
  }
}

/*====================================================
 Service Details Page Styling
======================================================*/
.cs_service_details .cs_service_contact {
  padding: 24px;
  border: 1px solid var(--gray-color2);
}

.cs_service_details .cs_service_contact .cs_service_price {
  display: flex;
  align-items: flex-end;
}

.cs_service_details .cs_service_contact small {
  font-size: 20px;
  font-weight: 500;
  line-height: 1.7em;
}

.cs_service_details .cs_service_contact hr {
  margin: 20px 0;
  opacity: 1;
  border-color: var(--gray-color2);
}

.cs_service_details .cs_service_desc {
  width: min(100%, 760px);
}

.cs_service_details .cs_service_desc h3 {
  font-size: 20px;
  font-weight: 600;
  font-family: var(--primary-font);
  margin-bottom: 20px;
}

.cs_service_details .cs_service_desc p {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.63em;
  font-family: var(--primary-font);
  margin-bottom: 32px;
}

.cs_service_details .cs_service_desc p:last-child {
  margin-bottom: 0;
}

.cs_service_details .cs_list_style_1 li {
  display: flex;
  gap: 8px;
  margin-bottom: 20px;
}

.cs_service_details .cs_list_style_1 li:last-child {
  margin-bottom: 0;
}

@media (max-width: 991px) {
  .cs_service_details .cs_service_desc {
    width: 100%;
  }

  .cs_service_details .cs_service_desc h3 {
    margin-bottom: 16px;
  }

  .cs_service_details .cs_service_desc p {
    margin-bottom: 24px;
  }
}

/*==============================================================
  11. Accordian
================================================================*/
.cs_accordian.cs_style_1 {
  background-color: var(--gray-color1);
}

.cs_accordian.cs_style_1 .cs_accordian_head {
  position: relative;
  line-height: 1.63em;
  padding: 24px 76px 24px 24px;
  cursor: pointer;
}

.cs_accordian.cs_style_1 .cs_accordian_head .cs_accordian_toggle {
  display: inline-block;
  width: 16px;
  height: 2px;
  background-color: var(--dark-blue);
  position: absolute;
  right: 24px;
  top: 39px;
  transition: all 0.3s ease;
}

.cs_accordian.cs_style_1 .cs_accordian_head .cs_accordian_toggle::before {
  content: "";
  width: 100%;
  height: 100%;
  background-color: inherit;
  position: absolute;
  transform: rotate(90deg);
  transition: all 0.3s ease;
}

.cs_accordian.cs_style_1 .cs_accordian_body {
  padding: 0 76px 24px 24px;
  margin-top: -12px;
}

.cs_accordian.cs_style_1.active {
  background-color: var(--lightest-blue);
}

.cs_accordian.cs_style_1.active .cs_accordian_head {
  pointer-events: none;
}

.cs_accordian.cs_style_1.active .cs_accordian_toggle::before {
  transform: rotate(0deg);
}

@media (max-width: 991px) {
  .cs_accordian.cs_style_1 .cs_accordian_head {
    padding: 16px 60px 16px 16px;
  }

  .cs_accordian.cs_style_1 .cs_accordian_head .cs_accordian_toggle {
    right: 16px;
    top: 30px;
  }

  .cs_accordian.cs_style_1 .cs_accordian_body {
    padding: 0 60px 16px 16px;
  }
}

@media (max-width: 575px) {
  .cs_accordian.cs_style_1 .cs_accordian_head {
    font-size: 16px;
  }
}

.cs_accordian_wraper_style_1 {
  width: min(100%, 1040px);
  margin: 0 auto;
}

.cs_accordian_wraper_style_1 .cs_accordian.cs_style_1 {
  margin-bottom: 24px;
}

.cs_accordian_wraper_style_1 .cs_accordian.cs_style_1:last-child {
  margin-bottom: 0;
}

.cs_faq_section .cs_accordian.cs_style_1 {
  border-radius: 20px;
  overflow: hidden;
}

/*==============================================================
  12. Hero
 ===============================================================*/
.cs_hero_style_1 {
  padding: 100px 16px 0;
  height: calc(100svh - 48px);
  display: flex;
  align-items: center;
  box-sizing: border-box;
}

.cs_hero_style_1 .cs_hero_inner {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 40px;
}

.cs_hero_style_1 .cs_hero_content {
  width: min(55vw, 750px);
}

.cs_hero_style_1 .cs_hero_content>* {
  position: relative;
  z-index: 1;
}

.cs_hero_style_1 .cs_hero_title span {
  color: var(--light-blue);
}
/* ... */

